--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "serialport": "^10.4.0",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
