--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "firebase": "^9.8.2",
+    "firebase-admin": "^10.2.0",
     "serialport": "^10.4.0",
     "socket.io": "^4.4.1"
   },
